# local-storage-utils

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  cli.py  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: datastore-reviewer.md
.github/workflows/: build.yml  ci.yml  emulator-test.yml  pr.yml  release.yml
commands/: __init__.py  analyze_entity_fields.py  analyze_kinds.py  cleanup_expired.py  config.py  drive_sync.py
docs/: DRIVE_INTERACTIVE.md
gcd_tools/: __init__.py  analyze_entity_fields.py  analyze_kinds.py  cleanup_expired.py  config.py
scripts/: run_emulator_local.sh  seed_emulator.py
tests/: test_analyze_entity_fields_unit.py  test_analyze_kinds_unit.py  test_cleanup_unit.py  test_commands.py  test_config.py  test_drive_sync_unit.py  test_import.py  test_utils.py
