[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-storage-utils"
version = "0.1.0"
description = "Utilities for analyzing and managing local Datastore/Firestore (Datastore mode) data"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["google-cloud-datastore", "firestore", "emulator", "cleanup", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "google-cloud-datastore>=2.19.0",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
rich = ["rich>=13.7.0"]

[project.scripts]
lsu = "cli:app"
local-storage-utils = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["gcd_tools*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100